# repo-template

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  test_runner.py
.github/workflows/: code_quality.yml  pytest.yml
config/: constants.py
notebooks/: say_hi.ipynb
requirements/: requirements-dev.txt
src/utils/: databricks.py
tests/utils/: test_utils.py
